# NLALGEBRA

./: .gitignore  CMakeLists.txt  README.md
includes/: CMakeLists.txt  nla_tools.hpp  utils.hpp
includes/kernel/: axpy.hpp  dot.hpp  gemm.hpp  lu.hpp  uaxpy.asm  udot.asm  ugemm.asm  utils.hpp
includes/kernel/blas1/: axpy.hpp  copy.hpp  dot.hpp  norm2.hpp  scal.hpp  swap.hpp
includes/kernel/lvl1/: axpy.hpp  copy.hpp  dot.hpp  scal.hpp  swap.hpp
includes/nla_kernels/: kernels.hpp
includes/nla_structures/: matrix.hpp  vector.hpp
scripts/: build.sh  test.sh
src/kernel/blas1/: uaxpy.asm  ucopy.asm  udot.asm  unorm2.asm  uscal.asm  uswap.asm
src/kernel/lvl1/: uaxpy.asm  ucopy.asm  udot.asm  unorm2.asm  uscal.asm  uswap.asm
tests/: CMakeLists.txt  test.cpp
